infrastructure/overlays/infra01/configurations/authentication/infra01-alter-it-eu/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-infra01-alter-it-eu
  namespace: controller-authentication
  annotations:
      external-dns.alpha.kubernetes.io/hostname: auth.infra01.alter-it.eu
      external-dns.alpha.kubernetes.io/target: infra01.alter-it.eu
      external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.infra01.alter-it.eu`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: auth-infra01-alter-it-eu-tls
